assets/sass/components/_chat-header.scss
.chat-header {
  background: var(--body-bg);
  border-bottom: 1px solid #aaa;
  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.1);
  padding-top: var(--gutter);
  margin-bottom: var(--gutter);
  overflow: hidden;
  position: relative;
  display: flex;
  align-items: baseline;
  position: sticky;
  top: 0;
  z-index: 2;

  @include if_screen("<=full") {
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
  }

  h1 {
    margin: 0;
    white-space: pre;
  }

  small {
    font-size: 0.9rem;
    font-style: italic;
    text-overflow: ellipsis;
    white-space: pre;
    margin-right: 2rem;
    overflow: hidden;
    display: block;

    &::before {
      content: '';
      padding-right: 1rem;
    }
  }

  form {
    padding: var(--gutter) 0;
    clear: both;
  }

  @include if_screen("<=full") {
    background: var(--sidebar-bg);
    color: var(--sidebar-text);
    border-bottom: 0;
  }
}

.chat-header__hamburger {
  color: inherit;
  font-size: 1.4rem;
  position: absolute;
  right: var(--gutter);
  top: 1.8rem;

  i {
    transition: transform 0.3s;
  }
}

.chat-header__hamburger {
  display: none;
}

@include if_screen("<=full") {
  .chat-header__hamburger {
    display: block;
    top: 0.7rem;
  }
}

